[gd_scene load_steps=4 format=2]

[ext_resource path="res://App/Extensions/SPID_Extension/Scripts/UI/Nodes/FormFilterNode.gd" type="Script" id=1]
[ext_resource path="res://Internal/Default/Themes/HeaderText.tres" type="Theme" id=2]
[ext_resource path="res://App/Resources/Arcturus_Skyrim_Resources/Prefabs/IdPanel.tscn" type="PackedScene" id=3]

[node name="FormFilterNode" type="HBoxContainer"]
margin_right = 392.0
margin_bottom = 48.0
size_flags_horizontal = 3
script = ExtResource( 1 )

[node name="VBoxContainer" type="VBoxContainer" parent="."]
margin_right = 368.0
margin_bottom = 232.0
size_flags_horizontal = 3

[node name="IdPanel" parent="VBoxContainer" instance=ExtResource( 3 )]
margin_left = 0.0
margin_top = 0.0
margin_right = 368.0
margin_bottom = 224.0

[node name="HSeparator" type="HSeparator" parent="VBoxContainer"]
margin_top = 228.0
margin_right = 368.0
margin_bottom = 232.0

[node name="DeleteButton" type="Button" parent="."]
margin_left = 372.0
margin_right = 392.0
margin_bottom = 232.0
theme = ExtResource( 2 )
text = "X"

[connection signal="pressed" from="DeleteButton" to="." method="_on_DeleteButton_pressed"]
